# ML-Pos-Venda

./: CLAUDE.md  README.md  auth_ml.py  config.py  main.py  ml_client.py  pyproject.toml  testar_telegram.py  webhook_server.py
.claude/agents/: pos-venda-dev.md  pos-venda-explorer.md
agents/: analisador.py  enviador.py  enviados.py  escalador.py  especialista.py  formatador.py  memoria.py  monitor.py  orquestrador.py  pendentes.py  respondedor.py  telegram_listener.py
base_conhecimento/: faq.md  garantia.md  instalacao.md  pendentes.json  politicas.md  produtos.md
docs/: api-ml.md  arquitetura.md  deploy.md  telegram.md
docs/documentacao-ML/: 0-autenticacao-oauth.md  1-perguntas-pre-venda.md  3-follow-up-automatico.md  4-agentes-e-fluxos.md  5-base-conhecimento.md
tests/: test_analisador.py  test_enviador.py  test_enviados.py  test_escalador.py  test_ml_client.py  test_respondedor.py
